--- a/厦门中小学云图书馆/read.html
+++ b/厦门中小学云图书馆/read.html
@@ -23,7 +23,23 @@
 			<li><a href="#">电子资源</a></li>
 			<li><a href="#">阅读活动</a></li>
 			<li><a href="#">统一检索</a></li>
-			<li id="login"><a href="javascript:;">立即登录</a></li>
+			<!-- <li id="login"><a href="javascript:;">立即登录</a></li> -->
+		</ul>
+		<ul class="pull-right mr15">
+			<li id="nav-user">
+				<div class="selected-dropdown dropdown nav-user-container">
+					<a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown">
+						<i class="icon icon-nav-user"></i>
+						王老师
+					</a>
+					<b class="caret"></b>
+					<div class="dropdown-menu">
+						<div><a href="#">修改密码</a></div>
+						<div><a href="#">查看资料</a></div>
+					</div>
+				</div>
+			</li>
+			<li id="loginout"><a href="javascript:;">退出</a></li>
 		</ul>
 	</div>
 </div>
