--- a/厦门中小学云图书馆/index.html
+++ b/厦门中小学云图书馆/index.html
@@ -58,6 +58,9 @@
 			</ul>
 		</div>
 	</div>
+	<div class="copyright">
+		<span>版权所有厦门中小学云图书馆　公安备案号：3502004303818020</span>
+	</div>
 </div>
 <div class="modal fade" tabindex="-1" role="dialog" id="modal">
 	<div class="modal-dialog" role="document" style="width:600px; top:200px">
