大同市图书馆-问题反馈20190307
统计信息（后台）
因为上级需要查看大同图书馆官网的点击量，所以需要做一个能记录点击量的东西（先做这个）
视频需要加点击量显示
编辑器修改（后台）
后台编辑太简单，排版太困难，最好能复制word排版，或其他网页格式粘贴

编辑器上的项目符合和数字没效果
参考山西文化云后台编辑窗口。而且支持wrod排版，和其他网页复制粘贴。

图书推荐页面（设计/前端/后台）
http://www.dtstsg.com/book/id-265.html

只有一个图有文字比较奇怪，并且点击图书没有详情页面。修改这个页面的样式，并增加详情页面。整体布局再紧凑一些。参考豆瓣布局，每本书的信息需要多一些。

视频显示（后台/前端）
http://www.dtstsg.com/video/home.html

视频分类在前台体现不出来，上下视频内容没有一模一样。前台要支持分类排序。

视频首页和详情页面的标题文字太大了。

视频头图没有自动轮播，需要修改为过3秒换下一个视频的图片。

视频资源不能直接调取，目前只能插入在文章中，需要修改功能。

新闻样式修改（前端）
http://www.dtstsg.com/article/id-283.html#show

一些新闻浮层，会出现左右的滚动条，需要内容限制宽度，避免图片或文字超出。一些底部的文字和图片无法显示完整，需要将底部留一点空间。

数字资源样式修改（前端）
http://www.dtstsg.com/dataBank/id-268.html

底部留空白太多，将表格内最小高度调整到200左右，等有了文字，再按照最大的高度，两边加高。

常见问题样式修改（设计/前端）
http://www.dtstsg.com/faq/id-275.html

不知道要点击展开，请补充点击展开箭头或者按钮。

--- a/大同图书馆/book-commend.html
+++ b/大同图书馆/book-commend.html
@@ -107,21 +107,23 @@
 								</div>
 								<div class="font-16">
 									<div class="sub row" style="overflow: hidden;">
-										<div class="col-md-5">
-											作者: 吴晓波 著<br />
-											出版社: 中信出版社
-										</div>
-										<div class="col-md-5">
-											出版时间: 2017年11月<br />
-											索书号：0023124651315161
+										<div class="col-md-10">
+											<strong>作者</strong>: 吴晓波 著<br />
+											<strong>出版社</strong>: 中信出版社
 										</div>
 										<div class="col-md-2">
 											<button class="btn btn-default pull-right font-16">借阅</button>
 											<!-- data-toggle="modal" data-target="#modal-borrow"  -->
 											<!-- 点击弹出参数 -->
 										</div>
+										<div class="col-md-12">
+											<strong>出版时间</strong>: 2017年11月<br />
+											<strong>索书号</strong>：0023124651315161
+										</div>
+										
 									</div>
 									<div class="mt20">
+										<strong>图书简介</strong><br />
 										知名财经作者吴晓波新作，畅销十年、销量超过两百万册的《激荡三十年》续篇，至此完成改革开放四十年企业史完整记录。<br />
 										作为时代记录者，吴晓波有意识地从1978年中国改革开放伊始，记录中国翻天覆地的变化和对我们影响至深的人物与事件，串成一部我们每个人的时代激荡史。而*的这十年，无疑更壮观，也更扑朔迷离。<br />
 										很多事情，在当时并未有很深很透的感受，回过头来再看，可能命运的轨迹就在那一刻无意中形成。这也是我们之所以应该回望历史的原因。 
@@ -129,67 +131,58 @@
 								</div>
 							</div>
 						</div>
-						<div class="book-commend-list mt30">
+						<div class="book-commend-list-summary mt30">
 							<ul class="clearfix">
 								<li>
-									<a data-id="1" href="javascript:;">
-										<div class="img">
-											<img src="images/book.png" alt="" />
+									<div class="img target" data-id="1">
+										<img src="images/book.png" alt="">
+									</div>
+									<div class="t font-16">
+										<strong>我喜欢生命本来的样子</strong>
+									</div>
+									<div class="info mt10">
+										<div class="item">作者: 吴晓波 著</div>
+										<div class="item">出版社: 中信出版社</div>
+										<div class="item">出版时间: 2017年11月</div>
+										<div class="item detail">
+											知名财经作者吴晓波新作，畅销十年、销量超过两百万册的《激荡三十年》续篇，至此完成改革开放四十年企业史完整记录。
+											作为时代记录者，吴晓波有意识地从19…
 										</div>
-										<strong class="title font-16">
-											谈判：如何在博弈中获得更多(第四版)
-										</strong>
-									</a>
+									</div>
 								</li>
 								<li>
-									<a data-id="2" href="javascript:;">
-										<div class="img">
-											<img src="images/book.png" alt="" />
+									<div class="img target" data-id="1">
+										<img src="images/book.png" alt="">
+									</div>
+									<div class="t font-16">
+										<strong>我喜欢生命本来的样子</strong>
+									</div>
+									<div class="info mt10">
+										<div class="item">作者: 吴晓波 著</div>
+										<div class="item">出版社: 中信出版社</div>
+										<div class="item">出版时间: 2017年11月</div>
+										<div class="item detail">
+											知名财经作者吴晓波新作，畅销十年、销量超过两百万册的《激荡三十年》续篇，至此完成改革开放四十年企业史完整记录。
+											作为时代记录者，吴晓波有意识地从19…
 										</div>
-										<strong class="title font-16">
-											谈判：如何在博弈中获得更多(第四版)
-										</strong>
-									</a>
+									</div>
 								</li>
 								<li>
-									<a data-id="3" href="javascript:;">
-										<div class="img">
-											<img src="images/book.png" alt="" />
+									<div class="img target" data-id="1">
+										<img src="images/book.png" alt="">
+									</div>
+									<div class="t font-16">
+										<strong>我喜欢生命本来的样子</strong>
+									</div>
+									<div class="info mt10">
+										<div class="item">作者: 吴晓波 著</div>
+										<div class="item">出版社: 中信出版社</div>
+										<div class="item">出版时间: 2017年11月</div>
+										<div class="item detail">
+											知名财经作者吴晓波新作，畅销十年、销量超过两百万册的《激荡三十年》续篇，至此完成改革开放四十年企业史完整记录。
+											作为时代记录者，吴晓波有意识地从19…
 										</div>
-										<strong class="title font-16">
-											谈判：如何在博弈中获得更多(第四版)
-										</strong>
-									</a>
-								</li>
-								<li>
-									<a data-id="4" href="javascript:;">
-										<div class="img">
-											<img src="images/book.png" alt="" />
-										</div>
-										<strong class="title font-16">
-											谈判：如何在博弈中获得更多(第四版)
-										</strong>
-									</a>
-								</li>
-								<li>
-									<a data-id="5" href="javascript:;">
-										<div class="img">
-											<img src="images/book.png" alt="" />
-										</div>
-										<strong class="title font-16">
-											谈判：如何在博弈中获得更多(第四版)
-										</strong>
-									</a>
-								</li>
-								<li>
-									<a data-id="6" href="javascript:;">
-										<div class="img">
-											<img src="images/book.png" alt="" />
-										</div>
-										<strong class="title font-16">
-											谈判：如何在博弈中获得更多(第四版)
-										</strong>
-									</a>
+									</div>
 								</li>
 							</ul>
 						</div>
@@ -204,8 +197,12 @@
 		<div class="modal-dialog" role="document" style="width:900px">
 			<div class="modal-content">
 				<div class="modal-body">
-					<div class="pull-right">
-						<i class="icon icon-closed icon-closed-min pull-right" data-dismiss="modal" aria-label="Close"></i>
+					<div class="modal-header modal-header-book">
+						<i class="icon icon-closed pull-right" data-dismiss="modal" aria-label="Close"></i>
+						<div class="font-24 pdl20"><strong>激荡十年，水大鱼大</strong></div>
+						<div class="font-16 pdl20">
+							发布时间: 2018-04-11　　　　　　作者:admin
+						</div>
 					</div>
 					<div class="book-commend-header">
 						<div class="img">
@@ -217,16 +214,17 @@
 							</div>
 							<div class="font-16">
 								<div class="sub row" style="overflow: hidden;">
-									<div class="col-md-6">
-										作者: 吴晓波 著<br />
-										出版社: 中信出版社
+									<div class="col-md-12">
+										<strong>作者</strong>: 吴晓波 著<br />
+										<strong>出版社</strong>: 中信出版社
 									</div>
-									<div class="col-md-6">
-										出版时间: 2017年11月<br />
-										索书号：0023124651315161
+									<div class="col-md-12">
+										<strong>出版时间</strong>: 2017年11月<br />
+										<strong>索书号</strong>：0023124651315161
 									</div>
 								</div>
 								<div class="mt20">
+									<strong>图书简介</strong><br />
 									知名财经作者吴晓波新作，畅销十年、销量超过两百万册的《激荡三十年》续篇，至此完成改革开放四十年企业史完整记录。<br />
 									作为时代记录者，吴晓波有意识地从1978年中国改革开放伊始，记录中国翻天覆地的变化和对我们影响至深的人物与事件，串成一部我们每个人的时代激荡史。而*的这十年，无疑更壮观，也更扑朔迷离。<br />
 									很多事情，在当时并未有很深很透的感受，回过头来再看，可能命运的轨迹就在那一刻无意中形成。这也是我们之所以应该回望历史的原因。 
@@ -306,7 +304,7 @@
 	
 	<script>
 		$(document).ready(function(){
-			$(".book-commend-list a").on("click",function(){
+			$(".book-commend-list-summary .target").on("click",function(){
 				var id = $(this).data("id")
 				// 通过id 获取 新书数据
 
