--- a/厦门中小学云图书馆/index.html
+++ b/厦门中小学云图书馆/index.html
@@ -125,7 +125,7 @@
 							</div>
 						</div>
 						<div class="item item-forget text-right">
-							<a href="#" class="primary">注册账号</a>
+							<a href="register.html" class="text-primary mr10">注册账号</a>
 							<a href="#">忘记密码？</a>
 						</div>
 						<div class="item item-error text-center">
@@ -153,137 +153,6 @@
 	</div>
 </div>
 
-<!-- 忘记密码 -->
-<div class="modal fade" tabindex="-1" role="dialog" id="modal-forget-password">
-	<div class="modal-dialog" role="document" style="width:600px; top:200px">
-		<div class="modal-content">
-			<div class="modal-body">
-				<div class="modal-header">
-					<i class="icon icon-closed pull-right" data-dismiss="modal" aria-label="Close"></i>
-				</div>
-				<div class="login">
-					<div class="login-title text-center">
-						<i class="icon icon-decoration mr10"></i>
-						忘记密码
-						<i class="icon icon-decoration ml10"></i>
-					</div>
-					<div class="login-body">
-						<div class="tips">
-							请输入您的用户名或电子邮箱地址。您会收到一封包含创建新密码链接的电子邮件。
-						</div>
-						<div class="item">
-							<div class="input-wrap">
-								<input type="text" placeholder="输入用户或邮箱地址" class="input-login" />
-								<i class="icon icon-user"></i>
-							</div>
-						</div>
-						<div class="item item-btn">
-							<button class="btn btn-primary btn-login">确定</button>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-</div>
-<!-- 忘记密码 -->
-
-<!-- 注册账号 -->
-<div class="modal fade" tabindex="-1" role="dialog" id="modal-register">
-	<div class="modal-dialog" role="document" style="width:600px; top:200px">
-		<div class="modal-content">
-			<div class="modal-body">
-				<div class="modal-header">
-					<i class="icon icon-closed pull-right" data-dismiss="modal" aria-label="Close"></i>
-				</div>
-				<div class="login">
-					<div class="login-title text-center">
-						<i class="icon icon-decoration mr10"></i>
-						注册账号
-						<i class="icon icon-decoration ml10"></i>
-					</div>
-					<div class="login-body register-body">
-						<div class="item">
-							<div class="label">
-								手机号
-							</div>
-							<div class="input-wrap">
-								<input type="text" placeholder="请输入手机号" class="input-login" />
-							</div>
-						</div>
-						<div class="item">
-							<div class="label">
-								手机验证码
-							</div>
-							<div class="input-wrap">
-								<input type="text" placeholder="请输入验证码" class="input-login" />
-							</div>
-						</div>
-						<div class="item">
-							<div class="label">
-								姓名
-							</div>
-							<div class="input-wrap">
-								<input type="text" placeholder="请输入姓名" class="input-login" />
-							</div>
-						</div>
-						<div class="item">
-							<div class="label">
-								昵称
-							</div>
-							<div class="input-wrap">
-								<input type="text" placeholder="请输入昵称" class="input-login" />
-							</div>
-						</div>
-						<div class="item">
-							<div class="label">
-								密码
-							</div>
-							<div class="input-wrap">
-								<input type="text" placeholder="请输入密码" class="input-login" />
-							</div>
-						</div>
-						<div class="item">
-							<div class="label">
-								确认密码
-							</div>
-							<div class="input-wrap">
-								<input type="text" placeholder="请输入确认密码" class="input-login" />
-							</div>
-						</div>
-						<div class="text-center mt20">
-							已认真阅读 <a href="#" class="text-primary">《会员注册条款》</a>
-						</div>
-						<div class="item item-btn">
-							<button class="btn btn-primary btn-login">注册</button>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-</div>
-<!-- 注册账号 -->
-
-<!-- 用户信息 -->
-<!-- 用户信息 -->
-
-
-
-<!-- 日历 -->
-<link rel="stylesheet" type="text/css" href="assets/css/bootstrap-datetimepicker.min.css" />
-<script src="assets/js/bootstrap-datetimepicker.min.js"></script>
-<script src="assets/js/bootstrap-datetimepicker.zh-CN.js" charset="UTF-8"></script>
-<!-- 日历 -->
-<input size="16" type="text" value="" data-date-format="yyyy-mm-dd" readonly class="form_datetime">
-<script type="text/javascript">
-	$(".form_datetime").datetimepicker({
-		format: 'yyyy-mm-dd', 
-		language : 'zh-CN',
-		minView: 'month',
-		autoclose: 1,
-	});
-</script> 
 <script>
 	
 	$(function(){
