--- a/厦门中小学云图书馆/account.html
+++ b/厦门中小学云图书馆/account.html
@@ -77,9 +77,15 @@
 						</div>
 					</div>
 					<div class="form-group">
-						<label class="col-sm-4 control-label">操作员号</label>
+						<label class="col-sm-4 control-label">选择图书馆</label>
 						<div class="col-sm-8">
-							<input type="text" value="nick" class="form-control" placeholder="请输入操作员号" />
+							<select class="form-control">
+								<option>图书馆1</option>
+								<option>图书馆2</option>
+								<option>图书馆3</option>
+								<option>图书馆4</option>
+								<option>图书馆5</option>
+							</select>
 						</div>
 					</div>
 					<div class="form-group">
