--- a/厦门中小学云图书馆/index.html
+++ b/厦门中小学云图书馆/index.html
@@ -63,7 +63,7 @@
 				<li class="bg2"><a href="#">书目检索平台</a></li>
 				<li class="bg3"><a href="news.html">最新动态</a></li>
 				<li class="bg4"><a href="#">知网资源</a></li>
-				<li class="bg5 login"><a href="javascript:;">云图书馆管理平台</a></li>
+				<!-- <li class="bg5 login"><a href="javascript:;">云图书馆管理平台</a></li> -->
 				<li class="bg6"><a href="#">资源服务</a></li>
 				<li class="bg7"><a href="#">校内访问</a></li>
 			</ul>
