--- a/厦门中小学云图书馆/password.html
+++ b/厦门中小学云图书馆/password.html
@@ -82,6 +82,13 @@
 							<input type="password" class="form-control" id="comform_passowrd" placeholder="请再次输入新密码" />
 						</div>
 					</div>
+					<div class="form-group">
+						<div class="col-sm-offset-4 col-sm-8">
+							<div class="text-required">
+								您输入的两次不一致，请重新输入
+							</div>
+						</div>
+					</div>
 					<div class="form-group mt30 password-submit">
 						<button type="submit" class="btn btn-primary">修改</button>
 					</div>
