--- a/厦门中小学云图书馆/account.html
+++ b/厦门中小学云图书馆/account.html
@@ -77,15 +77,9 @@
 						</div>
 					</div>
 					<div class="form-group">
-						<label class="col-sm-4 control-label">选择图书馆</label>
+						<label class="col-sm-4 control-label">图书馆</label>
 						<div class="col-sm-8">
-							<select class="form-control">
-								<option>图书馆1</option>
-								<option>图书馆2</option>
-								<option>图书馆3</option>
-								<option>图书馆4</option>
-								<option>图书馆5</option>
-							</select>
+							<p class="form-control-static">图书馆1</p>
 						</div>
 					</div>
 					<div class="form-group">
