--- a/厦门中小学云图书馆/register.html
+++ b/厦门中小学云图书馆/register.html
@@ -65,18 +65,6 @@
 			<div class="page-form page-form-register">
 				<form class="form-horizontal">
 					<div class="form-group">
-						<label class="col-sm-4 control-label"><span class="text-required">*</span> 姓名 </label>
-						<div class="col-sm-8">
-							<input type="text" class="form-control" placeholder="请输入姓名" />
-						</div>
-					</div>
-					<div class="form-group">
-						<label class="col-sm-4 control-label"><span class="text-required">*</span> 身份证号</label>
-						<div class="col-sm-8">
-							<input type="text" class="form-control" placeholder="请输入身份证号" />
-						</div>
-					</div>
-					<div class="form-group">
 						<label class="col-sm-4 control-label">选择图书馆</label>
 						<div class="col-sm-8">
 							<select class="form-control">
@@ -88,6 +76,19 @@
 							</select>
 						</div>
 					</div>
+					<div class="form-group">
+						<label class="col-sm-4 control-label"><span class="text-required">*</span> 姓名 </label>
+						<div class="col-sm-8">
+							<input type="text" class="form-control" placeholder="请输入姓名" />
+						</div>
+					</div>
+					<div class="form-group">
+						<label class="col-sm-4 control-label"><span class="text-required">*</span> 身份证号</label>
+						<div class="col-sm-8">
+							<input type="text" class="form-control" placeholder="请输入身份证号" />
+						</div>
+					</div>
+					
 					<div class="form-group">
 						<label class="col-sm-4 control-label">邮箱</label>
 						<div class="col-sm-8">
@@ -120,7 +121,7 @@
 						</div>
 					</div>
 					<div class="form-group mt30 password-submit">
-						<button type="submit" class="btn btn-primary">修改</button>
+						<button type="submit" class="btn btn-primary">注册</button>
 					</div>
 				</form>
 			</div>
