--- a/大同图书馆/book-commend.html
+++ b/大同图书馆/book-commend.html
@@ -169,7 +169,7 @@
 								</li>
 								<li>
 									<div class="img target" data-id="1">
-										<img src="images/book.png" alt="">
+										<img src="http://www.dtstsg.com/UserFiles/book/orig/8ab37ea4-9000-483d-9ee1-70aba1f1cc78.png" alt="">
 									</div>
 									<div class="t font-16">
 										<strong>我喜欢生命本来的样子</strong>
