图书推荐问题

--- a/大同图书馆/book-commend.html
+++ b/大同图书馆/book-commend.html
@@ -97,7 +97,7 @@
 				</div>
 				<div class="page-content">
 					<div class="news-view">
-						<div class="book-commend-header">
+						<div class="book-commend-header clearfix">
 							<div class="img">
 								<img src="images/book.png" alt="" />
 							</div>
@@ -204,7 +204,7 @@
 							发布时间: 2018-04-11　　　　　　作者:admin
 						</div>
 					</div>
-					<div class="book-commend-header">
+					<div class="book-commend-header clearfix">
 						<div class="img">
 							<img src="images/book.png" alt="" />
 						</div>
