--- a/南沙图书馆/src/about.html
+++ b/南沙图书馆/src/about.html
@@ -25,8 +25,8 @@
 				<div class="pull-right menu">
 					<ul>
 						<li><a href="index.html">首页</a></li>
-						<li><a href="about.html">走进南图</a></li>
-						<li class="active"><a href="news.html">资讯动态</a></li>
+						<li class="active"><a href="about.html">走进南图</a></li>
+						<li><a href="news.html">资讯动态</a></li>
 						<li><a href="reader.html">我是读者</a></li>
 						<li><a href="resource.html">数字资源</a></li>
 						<li><a href="theme.html">特色专题</a></li>
@@ -42,14 +42,19 @@
 				<div class="main clearfix">
 					<div class="aside">
 						<div class="title">
-							资讯动态
+							走进南图
 						</div>
 						<div class="nav">
 							<ul>
-								<li class="active"><a href="news.html">新闻信息</a></li>
-								<li><a href="news-notice.html">通知公告</a></li>
-								<li><a href="news-talk.html">南图讲坛</a></li>
-								<li><a href="news-net.html">网上展览</a></li>
+								<li class="active"><a href="about.html">走进南图</a></li>
+								<li><a href="about-history.html">南图历史</a></li>
+								<li><a href="about-org.html">机构设置</a></li>
+								<li><a href="about-news.html">馆务公开</a></li>
+								<li><a href="about-regulations.html">南图章程</a></li>
+								<li><a href="about-plan.html">发展规划</a></li>
+								<li><a href="about-year.html">年度规划</a></li>
+								<li><a href="about-report.html">南图年报</a></li>
+								<li><a href="about-count.html">统计数字</a></li>
 							</ul>
 						</div>
 					</div>
@@ -57,10 +62,10 @@
 						<div class="content-title">
 							<div class="bread-crumb pull-right">
 								<i class="icon icon-adress"></i>
-								<a href="index.html">首页</a> <span class="gap">/</span> <span>资讯动态</span> <span class="gap">/</span> 新闻信息
+								<a href="index.html">首页</a> <span class="gap">/</span> <span>走进南图</span> <span class="gap">/</span> 南图概况
 							</div>
 							<div class="text">
-								新闻信息
+								南图概况
 								<div class="line"></div>
 							</div>
 						</div>
