--- a/南沙图书馆/src/theme.html
+++ b/南沙图书馆/src/theme.html
@@ -26,10 +26,10 @@
 					<ul>
 						<li><a href="index.html">首页</a></li>
 						<li><a href="about.html">走进南图</a></li>
-						<li class="active"><a href="news.html">资讯动态</a></li>
+						<li><a href="news.html">资讯动态</a></li>
 						<li><a href="reader.html">我是读者</a></li>
 						<li><a href="resource.html">数字资源</a></li>
-						<li><a href="theme.html">特色专题</a></li>
+						<li class="active"><a href="theme.html">特色专题</a></li>
 					</ul>
 				</div>
 			</div>
@@ -42,14 +42,14 @@
 				<div class="main clearfix">
 					<div class="aside">
 						<div class="title">
-							资讯动态
+							特色专题
 						</div>
 						<div class="nav">
 							<ul>
-								<li class="active"><a href="news.html">新闻信息</a></li>
-								<li><a href="news-notice.html">通知公告</a></li>
-								<li><a href="news-talk.html">南图讲坛</a></li>
-								<li><a href="news-net.html">网上展览</a></li>
+								<li class="active"><a href="theme.html">南图人物</a></li>
+								<li><a href="theme-2.html">书香南沙</a></li>
+								<li><a href="theme-3.html">学习党的十九大</a></li>
+								<li><a href="theme-4.html">廉洁教育专栏</a></li>
 							</ul>
 						</div>
 					</div>
@@ -57,10 +57,10 @@
 						<div class="content-title">
 							<div class="bread-crumb pull-right">
 								<i class="icon icon-adress"></i>
-								<a href="index.html">首页</a> <span class="gap">/</span> <span>资讯动态</span> <span class="gap">/</span> 新闻信息
+								<a href="index.html">首页</a> <span class="gap">/</span> <span>特色专题</span> <span class="gap">/</span> 南图人物
 							</div>
 							<div class="text">
-								新闻信息
+								南图人物
 								<div class="line"></div>
 							</div>
 						</div>
