--- a/南沙图书馆/src/reader.html
+++ b/南沙图书馆/src/reader.html
@@ -26,8 +26,8 @@
 					<ul>
 						<li><a href="index.html">首页</a></li>
 						<li><a href="about.html">走进南图</a></li>
-						<li class="active"><a href="news.html">资讯动态</a></li>
-						<li><a href="reader.html">我是读者</a></li>
+						<li><a href="news.html">资讯动态</a></li>
+						<li class="active"><a href="reader.html">我是读者</a></li>
 						<li><a href="resource.html">数字资源</a></li>
 						<li><a href="theme.html">特色专题</a></li>
 					</ul>
@@ -47,9 +47,9 @@
 						<div class="nav">
 							<ul>
 								<li class="active"><a href="news.html">新闻信息</a></li>
-								<li><a href="news-notice.html">通知公告</a></li>
-								<li><a href="news-talk.html">南图讲坛</a></li>
-								<li><a href="news-net.html">网上展览</a></li>
+								<li><a href="#">通知公告</a></li>
+								<li><a href="#">南图讲坛</a></li>
+								<li><a href="#">网上展览</a></li>
 							</ul>
 						</div>
 					</div>
