--- a/南沙图书馆/src/news.html
+++ b/南沙图书馆/src/news.html
@@ -65,7 +65,110 @@
 							</div>
 						</div>
 						<div class="content-container">
-							
+							<!-- 新闻 -->
+							<div class="news-list">
+								<ul>
+									<li>
+										<a href="news-show.html">
+											<span class="pull-right text-info">2017-11-26</span>
+											<span class="t">南沙区图书馆“外包”走出新路</span>
+										</a>
+									</li>
+									<li>
+										<a href="news-show.html">
+											<span class="pull-right text-info">2017-11-26</span>
+											<span class="t">南沙区图书馆“外包”走出新路</span>
+										</a>
+									</li>
+									<li>
+										<a href="news-show.html">
+											<span class="pull-right text-info">2017-11-26</span>
+											<span class="t">南沙区图书馆“外包”走出新路</span>
+										</a>
+									</li>
+									<li>
+										<a href="news-show.html">
+											<span class="pull-right text-info">2017-11-26</span>
+											<span class="t">南沙区图书馆“外包”走出新路</span>
+										</a>
+									</li>
+									<li>
+										<a href="news-show.html">
+											<span class="pull-right text-info">2017-11-26</span>
+											<span class="t">南沙区图书馆“外包”走出新路</span>
+										</a>
+									</li>
+									<li>
+										<a href="news-show.html">
+											<span class="pull-right text-info">2017-11-26</span>
+											<span class="t">南沙区图书馆“外包”走出新路</span>
+										</a>
+									</li>
+									<li>
+										<a href="news-show.html">
+											<span class="pull-right text-info">2017-11-26</span>
+											<span class="t">南沙区图书馆“外包”走出新路</span>
+										</a>
+									</li>
+									<li>
+										<a href="news-show.html">
+											<span class="pull-right text-info">2017-11-26</span>
+											<span class="t">南沙区图书馆“外包”走出新路</span>
+										</a>
+									</li>
+									<li>
+										<a href="news-show.html">
+											<span class="pull-right text-info">2017-11-26</span>
+											<span class="t">南沙区图南沙区图书馆“外包”走出新路南沙区图书馆“外包”走出新路南沙区图书馆“外包”走出新路南沙区图书馆“外包”走出新路书馆“外包”走出新路</span>
+										</a>
+									</li>
+									<li>
+										<a href="news-show.html">
+											<span class="pull-right text-info">2017-11-26</span>
+											<span class="t">南沙区图书馆“外包”走出新路</span>
+										</a>
+									</li>
+									<li>
+										<a href="news-show.html">
+											<span class="pull-right text-info">2017-11-26</span>
+											<span class="t">南沙区图书馆“外包”走出新路</span>
+										</a>
+									</li>
+									<li>
+										<a href="news-show.html">
+											<span class="pull-right text-info">2017-11-26</span>
+											<span class="t">南沙区图书馆“外包”走出新路</span>
+										</a>
+									</li>
+								</ul>
+							</div>
+							<!-- 新闻 -->
+
+							<!-- 分页 -->
+							<ul class="pagination">
+								<li class="disabled">
+									<a href="#">
+										上一页
+									</a>
+								</li>
+								<li class="active"><a href="#">1</a></li>
+								<li><a href="#">2</a></li>
+								<li><a href="#">3</a></li>
+								<li><a href="#">4</a></li>
+								<li><a href="#">5</a></li>
+								<li>
+									<a href="#">
+										下一页
+									</a>
+								</li>
+								<li>
+									<div class="total">
+										<input type="text" value="1" /> /24 页
+									</div>
+								</li>
+								<li><a href="#">跳转</a></li>
+							</ul>
+							<!-- 分页 -->
 						</div>
 					</div>
 				</div>
