--- a/南沙图书馆/src/resource.html
+++ b/南沙图书馆/src/resource.html
@@ -77,8 +77,8 @@
 					<a href="about.html">关于南图</a>&nbsp; |&nbsp; 
 					<a href="contact.html">联系我们</a>&nbsp; |&nbsp;
 					<a href="sitemap.html">网站地图</a>
-					&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-					馆长信箱：123456798@163.com &nbsp; &nbsp; &nbsp; &nbsp;
+					<span class="gap-1"></span>
+					馆长信箱：123456798@163.com <span class="gap-2"></span>
 					版权所有 南沙图书馆 Copyright &#169 2010-2018 All Rights Reserved 粤ICP备00000000号
 			</div>
 		</div>
