--- a/南沙图书馆/src/about-history.html
+++ b/南沙图书馆/src/about-history.html
@@ -71,43 +71,64 @@
 						</div>
 						<div class="content-container">
 							<div class="history-list">
-								<div class="now"></div>
+								<div class="now">
+									2009年成立至今
+									<i class="icon-node-empty"></i>
+									<div class="line"></div>
+								</div>
 								<ul>
 									<li>
 										<div class="info">
 											<div class="wrap">
 												<div class="year">2019</div>
-												<div class="mouth">
+												<div class="month">
 													<div class="t">8月</div>
 													<div class="text">2004年，中国互联网公司开启第二轮境外上市热潮<br />盛大网络、腾讯公司、空中网等网络公司纷纷在海外上市<br />在互联网之都杭州，博采网络应声创立</div>
 												</div>
-												<div class="mouth">
+												<div class="month">
 													<div class="t">8月</div>
 													<div class="text">空中网等网络公司纷纷在海外上市 <br />在互联网之都杭州，博采网络应声创立</div>
 												</div>
 											</div>
 										</div>
+										<i class="icon icon-node"></i>
 										<div class="line"></div>
-										<div class="pic"><img src="./assets/images/history.png" alt=""></div>
+										<div class="pic">
+											<div class="arrow"></div>
+											<img src="./assets/images/history.png" alt="" />
+										</div>
 									</li>
+
 									<li>
 										<div class="info">
 											<div class="wrap">
 												<div class="year">2018</div>
-												<div class="mouth">
-													<div class="t">8月</div>
+												<div class="month">
+													<div class="t">3月</div>
 													<div class="text">2004年，中国互联网公司开启第二轮境外上市热潮<br />盛大网络、腾讯公司、空中网等网络公司纷纷在海外上市<br />在互联网之都杭州，博采网络应声创立</div>
 												</div>
-												<div class="mouth">
+												<div class="month">
+													<div class="t">6月</div>
+													<div class="text">空中网等网络公司博采网络应声创立</div>
+												</div>
+												<div class="month">
 													<div class="t">8月</div>
 													<div class="text">空中网等网络公司纷纷在海外上市 <br />在互联网之都杭州，博采网络应声创立</div>
 												</div>
 											</div>
 										</div>
+										<i class="icon icon-node"></i>
 										<div class="line"></div>
-										<div class="pic"><img src="./assets/images/history.png" alt=""></div>
+										<div class="pic">
+											<div class="arrow"></div>
+											<img src="./assets/images/history-2.png" alt="" />
+										</div>
 									</li>
+
 								</ul>
+								<div class="end">
+									<i class="icon-node-empty"></i>
+								</div>
 							</div>
 						</div>
 					</div>
