--- a/南沙图书馆/src/about-regulations.html
+++ b/南沙图书馆/src/about-regulations.html
@@ -50,8 +50,8 @@
 								<li><a href="about-history.html">南图历史</a></li>
 								<li><a href="about-org.html">机构设置</a></li>
 								<li><a href="about-news.html">馆务公开</a></li>
-								<li><a href="about-regulations.html">南图章程</a></li>
-								<li class="active"><a href="about-plan.html">发展规划</a></li>
+								<li class="active"><a href="about-regulations.html">南图章程</a></li>
+								<li><a href="about-plan.html">发展规划</a></li>
 								<li><a href="about-year.html">年度规划</a></li>
 								<li><a href="about-report.html">南图年报</a></li>
 								<li><a href="about-count.html">统计数字</a></li>
@@ -62,26 +62,39 @@
 						<div class="content-title">
 							<div class="bread-crumb pull-right">
 								<i class="icon icon-adress"></i>
-								<a href="index.html">首页</a> <span class="gap">/</span> <span>走进南图</span> <span class="gap">/</span> 发展规划
+								<a href="index.html">首页</a> <span class="gap">/</span> <span>走进南图</span> <span class="gap">/</span> 南图章程
 							</div>
 							<div class="text">
-								发展规划
+								南图章程
 								<div class="line"></div>
 							</div>
 						</div>
 						<div class="content-container">
-							
-							<div id="pdf-reader">加载中...</div>
-							<script src="./assets/js/pdfobject.js"></script>
-							<script>
-								$(document).ready(function(){
-									PDFObject.embed(
-										'https://pdfobject.com/pdf/sample-3pp.pdf', 
-										'#pdf-reader' ,
-										{ height : '700px'}
-									)
-								})
-							</script>
+							<div class="editor">
+								<p><strong class="font-18">目 录 </strong></p>
+								<p>
+									1.总 则 <br />
+									2.宗旨和业务范围  <br />
+									3.举办单位 <br />
+									4.理事会 <br />
+									5.管理层 <br />
+									6.资产管理和使用 <br />
+									7.信息披露 <br />
+									8.终止和剩余资产处理 <br />
+									9.章程修改 <br />
+									10.附 则 <br />
+								</p>
+								<p><strong class="font-18">第一章 总 则 </strong></p>
+								<p>第一条 <br />
+									为规范本馆行为，确保公益目标的实现，根据《事业单位登记管理暂行条例》及其实施细则和国家有关法律法规及其他有关规定，制定本章程。 
+								</p>
+								<p>第二条  <br />
+									本馆名称是深圳图书馆，英文名称是 ShenzhenLibrary。 
+								</p>
+								<p>第三条  <br />
+									本馆住所是深圳市福田区莲花街道福中一路 2001 号。
+								</p>
+							</div>
 						</div>
 					</div>
 				</div>
