--- a/南沙图书馆/src/about-report.html
+++ b/南沙图书馆/src/about-report.html
@@ -51,9 +51,9 @@
 								<li><a href="about-org.html">机构设置</a></li>
 								<li><a href="about-news.html">馆务公开</a></li>
 								<li><a href="about-regulations.html">南图章程</a></li>
-								<li class="active"><a href="about-plan.html">发展规划</a></li>
+								<li><a href="about-plan.html">发展规划</a></li>
 								<li><a href="about-year.html">年度规划</a></li>
-								<li><a href="about-report.html">南图年报</a></li>
+								<li class="active"><a href="about-report.html">南图年报</a></li>
 								<li><a href="about-count.html">统计数字</a></li>
 							</ul>
 						</div>
@@ -62,26 +62,53 @@
 						<div class="content-title">
 							<div class="bread-crumb pull-right">
 								<i class="icon icon-adress"></i>
-								<a href="index.html">首页</a> <span class="gap">/</span> <span>走进南图</span> <span class="gap">/</span> 发展规划
+								<a href="index.html">首页</a> <span class="gap">/</span> <span>走进南图</span> <span class="gap">/</span> 南图年报
 							</div>
 							<div class="text">
-								发展规划
+								南图年报
 								<div class="line"></div>
 							</div>
 						</div>
 						<div class="content-container">
-							
-							<div id="pdf-reader">加载中...</div>
-							<script src="./assets/js/pdfobject.js"></script>
-							<script>
-								$(document).ready(function(){
-									PDFObject.embed(
-										'https://pdfobject.com/pdf/sample-3pp.pdf', 
-										'#pdf-reader' ,
-										{ height : '700px'}
-									)
-								})
-							</script>
+							<div class="year-plan-list year-report-list">
+								<ul class="clearfix">
+									<li>
+										<a href="javascript:;">
+											<span class="year">2019年</span>
+											<span class="sub">南沙图书馆年报</span>
+											<span>阅读</span>
+										</a>
+									</li>
+									<li>
+										<a href="javascript:;">
+											<span class="year">2018年</span>
+											<span class="sub">南沙图书馆年报</span>
+											<span>阅读</span>
+										</a>
+									</li>
+									<li>
+										<a href="javascript:;">
+											<span class="year">2017年</span>
+											<span class="sub">南沙图书馆年报</span>
+											<span>阅读</span>
+										</a>
+									</li>
+									<li>
+										<a href="javascript:;">
+											<span class="year">2016年</span>
+											<span class="sub">南沙图书馆年报</span>
+											<span>阅读</span>
+										</a>
+									</li>
+									<li>
+										<a href="javascript:;">
+											<span class="year">2015年</span>
+											<span class="sub">南沙图书馆年报</span>
+											<span>阅读</span>
+										</a>
+									</li>
+								</ul>
+							</div>
 						</div>
 					</div>
 				</div>
