--- a/南沙图书馆/src/news-show.html
+++ b/南沙图书馆/src/news-show.html
@@ -46,7 +46,7 @@
 						</div>
 						<div class="nav">
 							<ul>
-								<li class="active"><a href="news.html">通用新闻详情页</a></li>
+								<li class="active"><a href="#">通用新闻详情页</a></li>
 							</ul>
 						</div>
 					</div>
